Images & Alignment fixes

--- a/src/app/components/advantage-tabs.component.scss
+++ b/src/app/components/advantage-tabs.component.scss
@@ -10,7 +10,7 @@
 
 .advantage-tabs-container {
   width: 100%;
-  max-width: 900px;
+  //max-width: 900px;
 }
 
 .advantage-tabs-list {
